import("//build/templates/build_template.gni")

build_rust("arm_gic") {
  epoch = "0.4"
  crate_type = "rlib"
  sources = [ "//external/arm-gic/v0.4.0/src/lib.rs" ]
  inputs = []
  edition = "2021"
  deps = [
    "//external/bitflags/v2.9.0:bitflags",
    "//external/safe-mmio/v0.2.5:safe_mmio",
    "//external/thiserror/v2.0.9:thiserror",
    "//external/zerocopy/v0.8.25:zerocopy",
  ]

  rustflags = [
    "--cap-lints=allow",  # Suppress all warnings in crates.io crates
  ]
}
